# tensordb

./: LICENSE.md  README.md  examples.py  pyproject.toml  requirements.txt  setup.py  test_zarr_v3.ipynb
.github/workflows/: python-app.yml
docs/html/: objects.inv  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/_sources/reference/: tensor_client.rst.txt
docs/html/reference/: base_storage.html  cached_tensor_handler.html  tensor_client.html  zarr_storage.html
docs/html/reference/api/: tensordb.TensorClient.add_tensor_definition.html  tensordb.TensorClient.backup.html  tensordb.TensorClient.close.html  tensordb.TensorClient.create_tensor.html  tensordb.TensorClient.exist_tensor_definition.html  tensordb.TensorClient.get_attrs.html  tensordb.TensorClient.get_storage_tensor_definition.html  tensordb.TensorClient.html  tensordb.TensorClient.read.html  tensordb.TensorClient.set_attrs.html  tensordb.TensorClient.storage_method_caller.html  tensordb.TensorClient.update_from_backup.html  tensordb.core.CachedTensorHandler.html  tensordb.file_handlers.BaseStorage.get_attrs.html  tensordb.file_handlers.BaseStorage.html  (+12 more)
docs/source/: conf.py  index.rst
docs/source/reference/: base_storage.rst  cached_storage.rst  tensor_client.rst  tensor_definition.rst  tensor_translator.rst  zarr_storage.rst
src/tensordb/: __init__.py  algorithms.py  common.py  config.py  sync.py  tensor_client.py  tensor_definition.py  tensor_translator.py
src/tensordb/backends/: base.py  cached_storage.py  engines.py  json.py  zarr.py
src/tensordb/branchfs/: branchfs.py
src/tensordb/clients/: __init__.py  base.py  file_cache_tensor_client.py  tensor_client.py
src/tensordb/storage/: base.py  branch.py
src/tensordb/storages/: __init__.py  base_storage.py  cached_storage.py  json_storage.py  lock.py  variables.py  zarr_storage.py
src/tensordb/tensor_definition/: dag.py  definition.py  transformation.py
src/tensordb/utils/: __init__.py  dag.py  ic_storage_model.py  method_inspector.py  tools.py
src/tensordb/zarr_v3/: __init__.py  array.py  array_spec.py  attributes.py  buffer.py  chunk_grids.py  chunk_key_encodings.py  convenience.py  creation.py  group.py  indexing.py  metadata.py  sync.py
tensor_db/: __init__.py
tensor_db/backup_handlers/: __init__.py
tensor_db/backup_handlers/s3_handler/: __init__.py  s3_handler.py
tensor_db/config/: config_root_dir.py
tensor_db/core/: __init__.py  tensor_db.py
tensor_db/file_handlers/: __init__.py
tensor_db/file_handlers/base_handler/: __init__.py
tensor_db/file_handlers/zarr_handler/: __init__.py  zarr_storage.py
tensor_db/tests/s3_handler/: test_s3_handler.py
tensor_db/tests/tensor_db/: test_tensor_db.py
tensor_db/tests/zarr_handler/: test_zarr_storage.py
tensordb/: __init__.py  algorithms.py  dag.py  file_cache_tensor_client.py  tensor_client.py  tensor_definition.py  tensor_translator.py
tensordb/backup_handlers/: __init__.py
tensordb/backup_handlers/base_handler/: __init__.py  base_handler.py
tensordb/backup_handlers/s3_handler/: __init__.py  s3_handler.py
tensordb/clients/: __init__.py  base.py  file_cache_tensor_client.py  tensor_client.py
tensordb/config/: config_root_dir.py  handlers.py
tensordb/core/: __init__.py  cached_tensor.py  tensor_client.py  utils.py
tensordb/file_handlers/: __init__.py
tensordb/file_handlers/base_handler/: __init__.py  base_storage.py
tensordb/file_handlers/json_handler/: __init__.py  json_storage.py
tensordb/file_handlers/zarr_handler/: __init__.py  utils.py  zarr_storage.py
tensordb/storages/: __init__.py  base_storage.py  cached_storage.py  json_storage.py  lock.py  mapping.py  storage_mapper.py  variables.py  zarr_storage.py
tensordb/tests/: conftest.py  test_algorithms.py  test_cached_storage.py  test_json_storage.py  test_tensor_client.py  test_tensor_translation.py  test_tools.py  test_zarr_storage.py
tensordb/tests/json_handler/: test_json_storage.py
tensordb/tests/s3_handler/: test_s3_handler.py
tensordb/tests/tensor_client/: test_cached_tensor.py  test_tensor_client.py
tensordb/tests/zarr_handler/: test_zarr_storage.py
tensordb/utils/: __init__.py  dag.py  method_inspector.py  sub_mapper.py  tools.py
tests/: conftest.py  test_algorithms.py  test_cached_storage.py  test_json_storage.py  test_mapping.py  test_tensor_client.py  test_zarr_storage.py
(+231 files in other folders)
