[project]
name = "tensordb"
version = "0.40.1"
description = "Database based in a file system storage combined with Xarray and Zarr"
keywords = ["Database Files Xarray Handler Zarr Store Read Write Append Update Upsert Backup Delete S3"]
readme = "README.md"
authors = [
    { name = "Joseph Nowak", email = "josephgonowak97@gmail.com" },
]
dependencies = [
    "dask[complete]>=2025.5.1",
    "loguru>=0.7.0",
    "more-itertools>=10.0.0",
    "numbagg>=0.9.0",
    "orjson>=3.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "xarray[accel]>=2025.6.1",
    "icechunk>=0.2.16",
    "numba>=0.61.0",
    "obstore>=0.6.0",
]
requires-python = ">=3.11"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-xdist",
    "sphinx",
]

[tool.ruff]

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
extend-safe-fixes = [
    "TID252", # absolute imports
]
ignore = [
    "E402",
    "E501",
    "E731",
    "UP007",
    "UP038"
]
extend-select = [
    "B", # flake8-bugbear
    "F", # Pyflakes
    "E", # Pycodestyle
    "W",
    "TID", # flake8-tidy-imports (absolute imports)
    "I", # isort
    "UP", # Pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# don't enforce absolute imports

[tool.ruff.lint.isort]
known-first-party = ["tensordb"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
